deployment-stock-portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-portfolio-service
  labels:
    app: stock-portfolio-service
    type: backend
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: stock-portfolio-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: stock-portfolio-service
  template:
    metadata:
      name: stock-portfolio-service-pod
      labels:
        app: stock-portfolio-service
    spec:
      containers:
        - name: stock-portfolio-service
          imagePullPolicy: Always
          #image: 10.140.64.116:5000/demo-k8s-consul-b:0.0.1-SNAPSHOT
          #image: 192.168.56.2:5000/stock-portfolio-service:0.0.1-SNAPSHOT
          image: localhost:5000/stock-portfolio-service:0.0.1-SNAPSHOT
#          command: [ "exec", "java"]
#          args: 
#            - "-cp"
#            - "app:app/lib/*" 
#            - "com.ht.subscription.SubscriptionServiceApplication" 
#            - "-Djava.security.egd=file:/dev/./urandom" 
#            - "-Dspring.profiles.active=dev"
#            - "-Dspring.cloud.consul.host=10.46.0.5"
#            - "-Dspring.cloud.consul.discovery.prefer-ip-address=true"
#            - "-Dspring.cloud.consul.discovery.ip-address=true" 
#            - "--spring.boot.admin.client.instance.service-base-url=http://${MY_POD_IP}:7570"
#          env:
#            - name: MONGO_URL
#              value: mongodb://mongo:27017/dev
#          env: 
#            - name: MY_POD_IP
#              valueFrom:
#                fieldRef:
#                  fieldPath: status.podIP

          ports:
          - name: liveness-port
            containerPort: 9001
          resources: #CHANGE
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi #256Mi

#          readineseProbe:
#            httpGet:
#              path: /
#              port: liveness-port
#            failureThreshold: 5
#            periodSeconds: 10
#            initialDelaySeconds: 60
#          livenessProbe:
#            httpGet:
#              path: /
#              port: liveness-port
#            failureThreshold: 5
#            periodSeconds: 10
#            initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
          # ports:
                  #          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock-portfolio-service
    spring-boot: "true"
  name: stock-portfolio-service
  namespace: default
spec:
  type: NodePort
  sessionAffinity: None
  ports:
  - nodePort: 30901
    targetPort: 9001
    port: 9001
    protocol: TCP
  selector:
    app: stock-portfolio-service
